# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  build.sh
Getting Started/: hello_window.cpp
Getting Started/Hello Triangle/: hello_triangle.cpp
Getting Started/Hello Window/: hello_window.cpp
include/glad/: glad.h
include/graphics/: create.h  draw.h  shaders.h  shaders_util.h
lessons/getting_started/hello_triangle/: CMakeLists.txt
lessons/getting_started/hello_triangle/include/: create.h  draw.h  shaders.h  shaders_util.h
lessons/getting_started/hello_triangle/shaders/: fragment_orange.glsl
lessons/getting_started/hello_triangle/src/: create.cpp  draw.cpp  main.cpp  shaders.cpp  shaders_util.cpp
lessons/getting_started/hello_window/: CMakeLists.txt
lessons/getting_started/shaders_lesson/: CMakeLists.txt
lessons/getting_started/shaders_lesson/shaders/: fragment.glsl  vertex.glsl
lessons/getting_started/shaders_lesson/src/: main.cpp
src/: create.cpp  draw.cpp  glad.c  shaders.cpp  shaders_util.cpp
